--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">AFSE Wallet</string>
     <string name="ok">ok</string>
     <string name="an_error_occurred">An error occurred.</string>
+    <string name="loading">Loading</string>
+    <string name="error">An error occured while fetching data, please check your internet connection and retry.</string>
+    <string name="no_results">No data found, try again later.</string>
+    <string name="retry">Retry</string>
 </resources>
