sample setup for navigation between modules

--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="no_results">No data found, try again later.</string>
     <string name="retry">Retry</string>
     <string name="not_provided">Not provided</string>
+    <string name="account">Account</string>
+    <string name="account_details">Account Details</string>
 </resources>
