added ui for account details module

--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="not_provided">Not provided</string>
     <string name="account">Account</string>
     <string name="account_details">Account Details</string>
+    <string name="account_type">Type</string>
+    <string name="account_name">Product name</string>
+    <string name="account_opened_date">Opened Date</string>
+    <string name="account_branch">Branch</string>
+    <string name="account_beneficiaries">Beneficiaries</string>
+    <string name="contentDescription">contentDescription</string>
 </resources>
