--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Wallet</string>
-    <string name="ok">ok</string>
+    <string name="ok">OK</string>
     <string name="an_error_occurred">An error occurred.</string>
     <string name="loading">Loading</string>
-    <string name="error">An error occured while fetching data, please check your internet connection and retry.</string>
+    <string name="error">An error occurred while fetching data, please check your internet connection and retry.</string>
     <string name="no_results">No data found, try again later.</string>
     <string name="retry">Retry</string>
     <string name="not_provided">Not provided</string>
@@ -20,4 +20,5 @@
     <string name="favorite_error_add">An error occurred while saving account as favorite</string>
     <string name="favorite_error_remove">An error occurred while removing account as favorite</string>
     <string name="unexpected_error">An unexpected error occurred</string>
+    <string name="no_transaction_results">No transaction data found, try again later.</string>
 </resources>
