--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="favorite_error_remove">An error occurred while removing account as favorite</string>
     <string name="unexpected_error">An unexpected error occurred</string>
     <string name="no_transaction_results">No transaction data found, try again later.</string>
+    <string name="accounts_portfolio">Portfolio</string>
 </resources>
